# mcat

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  dist-workspace.toml  fake.mmd  idk.txt  m.txt  real.mmd  support.md  test.txt  text.txt
.github/workflows/: release.yml  update-downloads.yml
crates/core/: Cargo.toml
crates/core/assets/: style.css
crates/core/src/: catter.rs  cdp.rs  concater.rs  config.rs  converter.rs  fetch_manager.rs  file_inspector.rs  image_viewer.rs  inspector.rs  lsix.rs  main.rs  markdown.rs  mcat_file.rs  prompter.rs  scrapy.rs  terminal_theme.rs  themes.rs  wry_screenshot.rs
crates/core/src/markdown_viewer/: html_preprocessor.rs  image_preprocessor.rs  mod.rs  render.rs  themes.rs  utils.rs
crates/core/tests/: output.rs  stdin.rs
crates/markdownify/: Cargo.toml  README.md
crates/markdownify/fixtures/: fixture.docx  fixture.odt  fixture.pptx
crates/markdownify/src/: archives.rs  docx.rs  error.rs  lib.rs  opendoc.rs  pptx.rs  sheets.rs
crates/markdownify/src/pdf/: mod.rs  pdf_page.rs
crates/rasteroid/: Cargo.toml  README.md
crates/rasteroid/src/: ascii_encoder.rs  error.rs  image_extended.rs  iterm_encoder.rs  kitty_encoder.rs  lib.rs  sixel_encoder.rs  term_misc.rs
images/: img.html
src/: image_extended.rs  image_reader_extended.rs  inline_image.rs  inline_image_reader.rs  inline_video.rs  iterm_encoder.rs  kitty_encoder.rs  main.rs  media.rs  media_encoder.rs  media_reader.rs  photo_media.rs  sixel_encoder.rs  term_misc.rs  url_query.rs  video.rs  video_media.rs
src/converters/: libreoffice.rs  md.rs  mod.rs  svg.rs  url.rs
src/encoders/: iterm_encoder.rs  kitty_encoder.rs  mod.rs
