[package]
name = "mcat"
version = "0.5.0"
authors = ["Meron Bossin"]
description = "a powerfull extended cat command, to cat all the things you couldn't before"
keywords = ["cat", "inline", "markitdown", "terminal", "file-converter"]
categories = [
  "command-line-utilities",
  "text-processing",
  "rendering",
  "multimedia",
]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "../../README.md"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "98B25CB4-C372-49AB-BE32-DFCB1C5110E5"
path-guid = "D1F93E5C-A8FF-462C-9540-5AF4D067001E"
license = false
eula = false

[dependencies]
markdownify.workspace = true
rasteroid.workspace = true
strip-ansi-escapes.workspace = true
clap_complete.workspace = true
which.workspace = true
rayon.workspace = true
itertools.workspace = true
inquire.workspace = true
shell-words.workspace = true
ignore.workspace = true
textwrap.workspace = true
clap.workspace = true
comrak.workspace = true
crossterm.workspace = true
pelite.workspace = true
image.workspace = true
tempfile.workspace = true
ffmpeg-sidecar.workspace = true
syntect.workspace = true
resvg.workspace = true
fontdb.workspace = true
serde_json.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
unicode-width.workspace = true
dirs.workspace = true
zip.workspace = true
scraper.workspace = true
reqwest.workspace = true
indicatif.workspace = true
regex.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true
