[package]
name = "markdownify"
version = "0.3.0"
authors = ["Meron Bossin"]
description = "markitdown in rust - convert various document and files into markdown"
keywords = ["conversion", "parser", "markitdown", "document", "markdown"]
categories = ["parser-implementations", "text-processing"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
thiserror = "2.0.18"

zip = { version = "7.4.0", features = [ "deflate-flate2" ], default-features = false }
tar = "0.4.44"

flate2 = "1.1.9"
xz2 = "0.1.7"

calamine = "0.33.0"
csv = "1.4.0"

quick-xml = "0.39.0"
