[package]
name = "markdownify"
version = "0.3.0"
authors = ["Meron Bossin"]
description = "markitdown in rust - convert various document and files into markdown"
keywords = ["conversion", "parser", "markitdown", "document", "markdown"]
categories = ["parser-implementations", "text-processing"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
thiserror.workspace = true

zip.workspace = true
tar.workspace = true

flate2.workspace = true
xz2.workspace = true

calamine.workspace = true
csv.workspace = true

quick-xml.workspace = true
